@@ -1,1 +1,1 @@
-GNU gettext library from gettext-0.10.17
+GNU gettext library from gettext-0.10.18
