@@ -47,6 +47,15 @@ Boston, MA 02111-1307, USA.  */
 
 #include "loadinfo.h"
 
+/* On some strange systems still no definition of NULL is found.  Sigh!  */
+#ifndef NULL
+# if defined __STDC__ && __STDC__
+#  define NULL ((void *) 0)
+# else
+#  define NULL 0
+# endif
+#endif
+
 /* @@ end of prolog @@ */
 
 #ifdef _LIBC
